--- a/src/ParserOfPsychologists.WinFormsUI/Forms/MainForms.resx
+++ b/src/ParserOfPsychologists.WinFormsUI/Forms/MainForms.resx
@@ -90,10 +90,10 @@
         mSM6aY6ITpojopPmiOik+YHwNy916T+BneUzAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="button1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="clearToCityBoxButton.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABIAAAASCAYAAABWzo5XAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAA75JREFUOE91Ug1MU1cYfS17peOn2JY5W0ZbyqiIlq57isVJ6QIlUGFi54TFseKm
+        EAAACxABrSO9dQAAA75JREFUOE91Ug1MU1cYfS17peOn2JY5W0ZbyqiIlq57isVJ6QIlUGFi54TFseKm
         ZiNbYAuxcwMnmYmbmgmLkxqYEOsACZNkGGeiooEYIGVltINFmRNHt2SoQCsg2Q9nt4/WgXEnuS/3fd85
         55733UdxudzHrsUwKKQZNWmq0vbcZKtFm7hdIQhXBFoUJ8h/1IAtBsBEC1JPZjKnfi/Ju/tHxU70fVyO
         2UoLul/L7CtJkpUGaAua/zP5VKP8EjtzgD2FZGVhx/6vkVzeChx4FdhnAcry0Z/NjCoj+FpWsMSEw2Fr
